force-app/main/default/objects/Lead/fields/ActivityDetails__c.field-meta.xml
<CustomField>
    <fullName>ActivityDetails__c</fullName>
    <label>Détails activité</label>
    <type>TextArea</type>
</CustomField>