force-app/main/default/objects/Lead/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescripteur physique</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recos</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>