force-app/main/default/objects/Lead/fields/AdvisorCompany__c.field-meta.xml
<CustomField>
    <fullName>AdvisorCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescripteur Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads prescrits</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>