force-app/main/default/objects/Lead/fields/AEComments__c.field-meta.xml
<CustomField>
    <fullName>AEComments__c</fullName>
    <label>Commentaires AE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>