force-app/main/default/objects/Lead/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>Indique le type de Rendez-vous défini à l&#39;aide du composant LeadAppointment (Transfert)</description>
    <label>Type de Rendez-vous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Téléphonique</fullName>
            </value>
            <value>
                <fullName>Au bureau</fullName>
            </value>
            <value>
                <fullName>Chez le client</fullName>
            </value>
            <value>
                <fullName>Transfert direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>