force-app/main/default/objects/Lead/fields/BackToSdrReason__c.field-meta.xml
<CustomField>
    <fullName>BackToSdrReason__c</fullName>
    <label>Motif de remontée</label>
    <type>TextArea</type>
</CustomField>