force-app/main/default/objects/Lead/fields/BestCallBackDate__c.field-meta.xml
<CustomField>
    <fullName>BestCallBackDate__c</fullName>
    <description>Calcule la date et heure optimale de rappel en fonction de l&#39;heure de la date de création</description>
    <formula>DATETIMEVALUE(TEXT(YEAR(TODAY()))+&#39;-&#39;+TEXT(MONTH(TODAY()))+&#39;-&#39;+TEXT(DAY(TODAY()))+&#39; &#39;+ 

MID( TEXT(CreatedDate - 1 ), 12, 2 ) 
&amp; &quot;:&quot; &amp;
MID( TEXT(CreatedDate - 1 ), 15, 2 ) 
&amp; &quot;:&quot; &amp;
MID( TEXT(CreatedDate - 1 ), 18, 2 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date optimale de rappel</label>
    <type>DateTime</type>
</CustomField>