force-app/main/default/objects/Lead/fields/BoilingLeadDate__c.field-meta.xml
<CustomField>
    <fullName>BoilingLeadDate__c</fullName>
    <label>Date Lead Bouillante</label>
    <type>DateTime</type>
</CustomField>