force-app/main/default/objects/Lead/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <description>Signatures des sms et mail</description>
    <inlineHelpText>Signatures des sms et mails</inlineHelpText>
    <label>Branding de sortie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>