force-app/main/default/objects/Lead/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>seo</fullName>
                <label>SEO</label>
            </value>
            <value>
                <fullName>paid-search</fullName>
                <label>Paid Search</label>
            </value>
            <value>
                <fullName>native</fullName>
                <label>Native</label>
            </value>
            <value>
                <fullName>paid-social-media</fullName>
                <label>Paid Social Media</label>
            </value>
            <value>
                <fullName>affiliation</fullName>
                <label>Affiliation</label>
            </value>
            <value>
                <fullName>partenariats</fullName>
                <label>Partenariats</label>
            </value>
            <value>
                <fullName>events</fullName>
                <label>Events</label>
            </value>
            <value>
                <fullName>reco-client</fullName>
                <label>Reco client</label>
            </value>
            <value>
                <fullName>presse</fullName>
                <label>Presse</label>
            </value>
            <value>
                <fullName>webinar</fullName>
            </value>
            <value>
                <fullName>inconnu</fullName>
                <label>Inconnu</label>
            </value>
            <value>
                <fullName>inbound</fullName>
                <isActive>false</isActive>
                <label>Inbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>