force-app/main/default/objects/Lead/fields/Contact_Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Contact_Partenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Partenaire</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Il est indispensable de choisir un contact du Cabinet Partenaire</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partenaire__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Contact Partenaire)</relationshipLabel>
    <relationshipName>LeadsContactPartner</relationshipName>
    <type>Lookup</type>
</CustomField>