force-app/main/default/objects/Lead/fields/ContactPartenariat__c.field-meta.xml
<CustomField>
    <fullName>ContactPartenariat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Le contact qui a envoyé la Lead.
C&#39;est un contact associé à l&#39;entreprise du champ référence &#39;Détail partenariat&#39;</description>
    <label>Contact - Partenariat</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partenariat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Contact - Partenariat)</relationshipLabel>
    <relationshipName>LeadsPartenariat</relationshipName>
    <type>Lookup</type>
</CustomField>