force-app/main/default/objects/Lead/fields/ContractSign__c.field-meta.xml
<CustomField>
    <fullName>ContractSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compta signée</label>
    <type>Checkbox</type>
</CustomField>