force-app/main/default/objects/Lead/fields/ContractSignLink__c.field-meta.xml
<CustomField>
    <fullName>ContractSignLink__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Lien Signature Contrat</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>