force-app/main/default/objects/Lead/fields/ConvertedAccountId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAccountId__c</fullName>
    <label>Id du compte après conversion</label>
    <length>18</length>
    <type>Text</type>
</CustomField>