force-app/main/default/objects/Lead/fields/CreationDay__c.field-meta.xml
<CustomField>
    <fullName>CreationDay__c</fullName>
    <formula>CASE(
				WEEKDAY(
								DATEVALUE(CreatedDate)), 1, &quot;Dimanche&quot;, 2, &quot;Lundi&quot;,3, &quot;Mardi&quot;,4, &quot;Mercredi&quot;,5, &quot;Jeudi&quot;,6,&quot;Vendredi&quot;,7,&quot;Samedi&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jour de création</label>
    <type>Text</type>
</CustomField>