force-app/main/default/objects/Lead/fields/CreationHour__c.field-meta.xml
<CustomField>
    <fullName>CreationHour__c</fullName>
    <formula>TIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heure de création</label>
    <type>Time</type>
</CustomField>