force-app/main/default/objects/Lead/fields/CreationProject__c.field-meta.xml
<CustomField>
    <fullName>CreationProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet de création</label>
    <referenceTo>Start__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>