force-app/main/default/objects/Lead/fields/CreatorSign__c.field-meta.xml
<CustomField>
    <fullName>CreatorSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Créateur Signé</label>
    <type>Checkbox</type>
</CustomField>