force-app/main/default/objects/Lead/fields/CreatorSignDate__c.field-meta.xml
<CustomField>
    <fullName>CreatorSignDate__c</fullName>
    <label>Date Créateur Signé</label>
    <type>DateTime</type>
</CustomField>