force-app/main/default/objects/Lead/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM</label>
    <type>Checkbox</type>
</CustomField>