force-app/main/default/objects/Lead/fields/CustomerRecommendation__c.field-meta.xml
<CustomField>
    <fullName>CustomerRecommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommandation Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Recommandation Client)</relationshipLabel>
    <relationshipName>BAO</relationshipName>
    <type>Lookup</type>
</CustomField>