force-app/main/default/objects/Lead/fields/Date_transmission_BGE__c.field-meta.xml
<CustomField>
    <fullName>Date_transmission_BGE__c</fullName>
    <label>Date transmission BGE idf</label>
    <type>DateTime</type>
</CustomField>