force-app/main/default/objects/Lead/fields/DateArriveeEnFileAttente__c.field-meta.xml
<CustomField>
    <fullName>DateArriveeEnFileAttente__c</fullName>
    <description>Date et heure où la Lead est affilée pour la première fois à la file d&#39;attente &quot;Leads en attente&quot;.</description>
    <label>Date d&#39;arrivée en file d&#39;attente</label>
    <type>DateTime</type>
</CustomField>