force-app/main/default/objects/Lead/fields/DateAssignation__c.field-meta.xml
<CustomField>
    <fullName>DateAssignation__c</fullName>
    <description>Date et heure à laquelle un utilisateur s&#39;assigne le Lead et le fait sortir de la file d&#39;attente.</description>
    <label>Date d&#39;assignation</label>
    <type>DateTime</type>
</CustomField>