force-app/main/default/objects/Lead/fields/DateAtelierSPE__c.field-meta.xml
<CustomField>
    <fullName>DateAtelierSPE__c</fullName>
    <label>Date atelier SPE</label>
    <type>Date</type>
</CustomField>