force-app/main/default/objects/Lead/fields/DateCall1Termine__c.field-meta.xml
<CustomField>
    <fullName>DateCall1Termine__c</fullName>
    <description>Date et heure à laquelle le lead passe du statut call 1 à un autre statut.</description>
    <label>Date Call1 Terminé</label>
    <type>DateTime</type>
</CustomField>