force-app/main/default/objects/Lead/fields/DateContractSign__c.field-meta.xml
<CustomField>
    <fullName>DateContractSign__c</fullName>
    <label>Date signature compta</label>
    <type>DateTime</type>
</CustomField>