force-app/main/default/objects/Lead/fields/DateLeadBackTiimeCrea__c.field-meta.xml
<CustomField>
    <fullName>DateLeadBackTiimeCrea__c</fullName>
    <label>Date retour Créa Tiime</label>
    <type>DateTime</type>
</CustomField>