force-app/main/default/objects/Lead/fields/DateStatutEC__c.field-meta.xml
<CustomField>
    <fullName>DateStatutEC__c</fullName>
    <description>Date indiquant la date et heure de passage de la lead au statut &quot;EC à Trouver&quot;</description>
    <label>Date Statut EC à trouver</label>
    <type>DateTime</type>
</CustomField>