force-app/main/default/objects/Lead/fields/DateTransfert__c.field-meta.xml
<CustomField>
    <fullName>DateTransfert__c</fullName>
    <description>Date indiquant le passage de la lead au statut transfert.</description>
    <label>Date de Transfert</label>
    <type>DateTime</type>
</CustomField>