force-app/main/default/objects/Lead/fields/DemoByMail__c.field-meta.xml
<CustomField>
    <fullName>DemoByMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recevoir la présentation par mail?</label>
    <type>Checkbox</type>
</CustomField>