force-app/main/default/objects/Lead/fields/DestSite__c.field-meta.xml
<CustomField>
    <fullName>DestSite__c</fullName>
    <label>Dest-site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LEC</fullName>
            </value>
            <value>
                <fullName>TIIME</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>LNEC</fullName>
            </value>
            <value>
                <fullName>PEPIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>