force-app/main/default/objects/Lead/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Canal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>adwords</fullName>
                <label>Adwords</label>
            </value>
            <value>
                <fullName>bing</fullName>
                <label>Bing</label>
            </value>
            <value>
                <fullName>outbrain</fullName>
                <label>Outbrain</label>
            </value>
            <value>
                <fullName>ligatus</fullName>
                <label>Ligatus</label>
            </value>
            <value>
                <fullName>taboola</fullName>
                <label>Taboola</label>
            </value>
            <value>
                <fullName>facebook</fullName>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>twitter</fullName>
                <label>Twitter</label>
            </value>
            <value>
                <fullName>linkedin</fullName>
                <label>LinkedIn</label>
            </value>
            <value>
                <fullName>youtube</fullName>
                <label>Youtube</label>
            </value>
            <value>
                <fullName>awin</fullName>
                <label>Awin</label>
            </value>
            <value>
                <fullName>kwanko</fullName>
                <label>Kwanko</label>
            </value>
            <value>
                <fullName>maddyness</fullName>
                <label>Maddyness</label>
            </value>
            <value>
                <fullName>french-web</fullName>
                <label>French web</label>
            </value>
            <value>
                <fullName>le-monde</fullName>
                <label>Le Monde</label>
            </value>
            <value>
                <fullName>les-echos</fullName>
                <label>Les Echos</label>
            </value>
            <value>
                <fullName>seo-direct</fullName>
                <label>Seo-direct</label>
            </value>
            <value>
                <fullName>inbound</fullName>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>newsletter</fullName>
                <label>Newsletter</label>
            </value>
            <value>
                <fullName>webinar</fullName>
                <label>Webinar</label>
            </value>
            <value>
                <fullName>blog-du-dirigeant</fullName>
                <isActive>false</isActive>
                <label>Blog du dirigeant</label>
            </value>
            <value>
                <fullName>companeo</fullName>
                <isActive>false</isActive>
                <label>Companeo</label>
            </value>
            <value>
                <fullName>qonto</fullName>
                <isActive>false</isActive>
                <label>Qonto</label>
            </value>
            <value>
                <fullName>sesame</fullName>
                <isActive>false</isActive>
                <label>Sesame</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>