force-app/main/default/objects/Lead/fields/Echeance_de_besoin_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Echeance_de_besoin_de_creation__c</fullName>
    <label>Echéance de besoin de création</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immédiat</fullName>
            </value>
            <value>
                <fullName>1 mois</fullName>
            </value>
            <value>
                <fullName>3 mois</fullName>
            </value>
            <value>
                <fullName>6 mois et plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>