force-app/main/default/objects/Lead/fields/EntrepreneurSign__c.field-meta.xml
<CustomField>
    <fullName>EntrepreneurSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrepreneur signé</label>
    <type>Checkbox</type>
</CustomField>