force-app/main/default/objects/Lead/fields/EntrepreneurSignDate__c.field-meta.xml
<CustomField>
    <fullName>EntrepreneurSignDate__c</fullName>
    <label>Date Entrepreneur signé</label>
    <type>DateTime</type>
</CustomField>