force-app/main/default/objects/Lead/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <formula>Event__r.EventDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Event</label>
    <type>DateTime</type>
</CustomField>