force-app/main/default/objects/Lead/fields/EventSpeaker__c.field-meta.xml
<CustomField>
    <fullName>EventSpeaker__c</fullName>
    <formula>Event__r.SpeakersName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervenant Event</label>
    <type>Text</type>
</CustomField>