force-app/main/default/objects/Lead/fields/FourStarsLead__c.field-meta.xml
<CustomField>
    <fullName>FourStarsLead__c</fullName>
    <formula>ISPICKVAL(Evaluation_a_priori__c,&quot;4Stars&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead 4 étoiles</label>
    <type>Checkbox</type>
</CustomField>