force-app/main/default/objects/Lead/fields/HeureCreation__c.field-meta.xml
<CustomField>
    <fullName>HeureCreation__c</fullName>
    <formula>HOUR(TIMEVALUE(CreatedDate))+2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heure de Création</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>