force-app/main/default/objects/Lead/fields/HubspotLastModificationDate__c.field-meta.xml
<CustomField>
    <fullName>HubspotLastModificationDate__c</fullName>
    <label>Dernière modification Hubspot</label>
    <type>DateTime</type>
</CustomField>