force-app/main/default/objects/Lead/fields/InProgressTiime__c.field-meta.xml
<CustomField>
    <fullName>InProgressTiime__c</fullName>
    <label>Créa par Tiime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>stop</fullName>
                <default>true</default>
                <label>Non</label>
            </value>
            <value>
                <fullName>progress</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>go</fullName>
                <label>Création Terminée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>