force-app/main/default/objects/Lead/fields/Is_Appointment_Set__c.field-meta.xml
<CustomField>
    <fullName>Is_Appointment_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case système.
Cochée les champs de RDV ont été renseignés via le composant LeadAppointment.</description>
    <label>RDV planifié</label>
    <type>Checkbox</type>
</CustomField>