force-app/main/default/objects/Lead/fields/IsClient__c.field-meta.xml
<CustomField>
    <fullName>IsClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>