force-app/main/default/objects/Lead/fields/IsForm__c.field-meta.xml
<CustomField>
    <fullName>IsForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formulaire</label>
    <type>Checkbox</type>
</CustomField>