force-app/main/default/objects/Lead/fields/IsLeadConvertedByLT20__c.field-meta.xml
<CustomField>
    <fullName>IsLeadConvertedByLT20__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case est cochée lors de la conversion de la lead par le composant lightning LT20. Elle permet lors de la conversion de ne pas appliquer la règle de duplication des contacts</description>
    <label>Conversion par LT20</label>
    <type>Checkbox</type>
</CustomField>