force-app/main/default/objects/Lead/fields/IsProscpect__c.field-meta.xml
<CustomField>
    <fullName>IsProscpect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est Prospect</label>
    <type>Checkbox</type>
</CustomField>