force-app/main/default/objects/Lead/fields/IsQualifiedLead__c.field-meta.xml
<CustomField>
    <fullName>IsQualifiedLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Qualifiée</label>
    <type>Checkbox</type>
</CustomField>