force-app/main/default/objects/Lead/fields/KbisReceive__c.field-meta.xml
<CustomField>
    <fullName>KbisReceive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kbis Tiime recu</label>
    <type>Checkbox</type>
</CustomField>