force-app/main/default/objects/Lead/fields/KbisReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>KbisReceptionDate__c</fullName>
    <label>Date de réception KBIS</label>
    <type>DateTime</type>
</CustomField>