force-app/main/default/objects/Lead/fields/LastStatusBeforeTransfert__c.field-meta.xml
<CustomField>
    <fullName>LastStatusBeforeTransfert__c</fullName>
    <description>Champ mis à jour avec Workflow</description>
    <label>Dernier statut avant transfert</label>
    <length>30</length>
    <type>Text</type>
</CustomField>