force-app/main/default/objects/Lead/fields/LeadBackCastingError__c.field-meta.xml
<CustomField>
    <fullName>LeadBackCastingError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retour erreur de casting</label>
    <type>Checkbox</type>
</CustomField>