force-app/main/default/objects/Lead/fields/LeadBackTiimeCrea__c.field-meta.xml
<CustomField>
    <fullName>LeadBackTiimeCrea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retour suite Créa Tiime</label>
    <type>Checkbox</type>
</CustomField>