force-app/main/default/objects/Lead/fields/LeadPrice__c.field-meta.xml
<CustomField>
    <fullName>LeadPrice__c</fullName>
    <formula>IF(ISPICKVAL( Partenaire__r.PartnerType__c,&quot;Groupe&quot;), 200,
			    	IF(ISPICKVAL( Partenaire__r.PartnerType__c,&quot;Hors Groupe&quot;), 100, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>