force-app/main/default/objects/Lead/fields/LeadStatusSimplified__c.field-meta.xml
<CustomField>
    <fullName>LeadStatusSimplified__c</fullName>
    <description>Champ système pour des rapports</description>
    <formula>IF( ISPICKVAL(Status, &quot;Partenaire&quot;), &quot;Transfert&quot;,
				IF( ISPICKVAL(Status, &quot;Perdu&quot;), &quot;Perdu&quot;,
				    IF(ISPICKVAL(Status, &quot;Call 1&quot;)  || ISPICKVAL(Status, &quot;Call 2&quot;) || ISPICKVAL(Status, &quot;Call 3&quot;) || ISPICKVAL(Status, &quot;Call 4&quot;) || ISPICKVAL(Status, &quot;Call 5&quot;) || ISPICKVAL(Status, &quot;Call 6&quot;) || ISPICKVAL(Status, &quot;Call 7&quot;), &quot;En cours&quot;, &quot;Transfert&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut Lead Simplifié</label>
    <type>Text</type>
</CustomField>