force-app/main/default/objects/Lead/fields/LeadTemperature__c.field-meta.xml
<CustomField>
    <fullName>LeadTemperature__c</fullName>
    <label>Température de la Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1flame</fullName>
                <label>🔥</label>
            </value>
            <value>
                <fullName>2flames</fullName>
                <label>🔥🔥</label>
            </value>
            <value>
                <fullName>3flames</fullName>
                <label>🔥🔥🔥</label>
            </value>
            <value>
                <fullName>4flames</fullName>
                <label>🔥🔥🔥🔥</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>