force-app/main/default/objects/Lead/fields/LegalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalStatus__c</fullName>
    <label>Forme Juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SASUSAS</fullName>
                <label>SASU / SAS</label>
            </value>
            <value>
                <fullName>EURLSARL</fullName>
                <label>EURL / SARL</label>
            </value>
            <value>
                <fullName>EntrepriseIndividuelle</fullName>
                <label>Entreprise Individuelle</label>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>SCI</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>NeSaitPas</fullName>
                <label>Ne sait pas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>