force-app/main/default/objects/Lead/fields/LegalStatusHubspot__c.field-meta.xml
<CustomField>
    <fullName>LegalStatusHubspot__c</fullName>
    <label>Forme juridique (Hubspot)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FormesJuridiquesHubspot</valueSetName>
    </valueSet>
</CustomField>