force-app/main/default/objects/Lead/fields/LegalStatusSPE__c.field-meta.xml
<CustomField>
    <fullName>LegalStatusSPE__c</fullName>
    <label>Forme Juridique</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>SASU</fullName>
            </value>
            <value>
                <fullName>SARL</fullName>
            </value>
            <value>
                <fullName>EURL</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>