force-app/main/default/objects/Lead/fields/Lien_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Lien_Calendly__c</fullName>
    <formula>Partenaire__r.LinkCalendly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien Calendly</label>
    <type>Text</type>
</CustomField>