force-app/main/default/objects/Lead/fields/Linking__c.field-meta.xml
<CustomField>
    <fullName>Linking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mise en relation</label>
    <type>Checkbox</type>
</CustomField>