force-app/main/default/objects/Lead/fields/LMNP__c.field-meta.xml
<CustomField>
    <fullName>LMNP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMNP</label>
    <type>Checkbox</type>
</CustomField>