force-app/main/default/objects/Lead/fields/LMNPDate__c.field-meta.xml
<CustomField>
    <fullName>LMNPDate__c</fullName>
    <label>Date LMNP</label>
    <type>DateTime</type>
</CustomField>