force-app/main/default/objects/Lead/fields/LossBy__c.field-meta.xml
<CustomField>
    <fullName>LossBy__c</fullName>
    <description>Mis à jour via workflow</description>
    <label>Perdu Par</label>
    <length>80</length>
    <type>Text</type>
</CustomField>