force-app/main/default/objects/Lead/fields/LossDate__c.field-meta.xml
<CustomField>
    <fullName>LossDate__c</fullName>
    <description>mis à jour via workflow</description>
    <label>Date de perte</label>
    <type>DateTime</type>
</CustomField>