force-app/main/default/objects/Lead/fields/LossDetails__c.field-meta.xml
<CustomField>
    <fullName>LossDetails__c</fullName>
    <label>Détail de perte de la lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>